--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<div id="app"></div>
+<!--div id="app"></div>-->
+<!DOCTYPE html>
+<html lang="pt-br" >
+  <head>
+    <meta charset="utf-8"/>
+    <title>Pong</title>
+    <limk rel="stylesheet" type="text/css" href="./style.css" media="screen" />
+    
+  </head>
