--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
   <head>
     <meta charset="utf-8"/>
     <title>Pong</title>
-    <limk rel="stylesheet" type="text/css" href="./style.css" media="screen" />
+    <style>
+      canvas{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        background-color: black;
+        margin-top: -300px;
+        margin-left: -300px;
+      }
+    </style>
     
   </head>
+
+  <body>
+    <canvas height="600" width="600" id="mycanvas"> o seu navegador nao suporta este elemento</canvas>
+    <s
+  </body>
+</html>
