--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 
   <body>
     <canvas height="600" width="600" id="mycanvas"> o seu navegador nao suporta este elemento</canvas>
-    <s
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
